tests/tests/snapshots/golden__gen__rust__scheduled-cleanup.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.dockerignore
============================================================
/target
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "maintenance"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service Maintenance`"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/maintenance /usr/local/bin/app

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# Maintenance

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Workers and scheduled jobs run separately:

```sh
cargo run --bin workers
```

Or bring up the full stack (API, workers/jobs, Postgres):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers and scheduled jobs | compiler |
| `src/config.rs` | Environment-driven settings | compiler |
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/8000"]
      interval: 1s
      timeout: 3s
      retries: 30
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/maintenance
    depends_on:
      db:
        condition: service_healthy

  workers:
    build: .
    command: ["workers"]
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/maintenance
    depends_on:
      db:
        condition: service_healthy

  db:
    image: postgres:16
    ports:
      - "5432:5432"
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: maintenance
    volumes:
      - db-data:/var/lib/postgresql/data
    healthcheck:
      test: ["CMD-SHELL", "pg_isready -U postgres"]
      interval: 2s
      timeout: 3s
      retries: 20

volumes:
  db-data:
============================================================
src/bin/workers.rs
============================================================
//! Runs every worker in one process. Generated by CIaC.

use maintenance::{config::Config, state::AppState, workers};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    maintenance::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    tokio::try_join!(
        workers::cleanup::run(state.clone()),
    )?;
    Ok(())
}
============================================================
src/config.rs
============================================================
//! Runtime configuration for Maintenance. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
    pub database_url: String,
}

impl Config {
    pub fn from_env() -> Self {
        Self {
            database_url: env_or(
                "DATABASE_URL",
                "postgres://postgres:postgres@localhost:5432/maintenance",
            ),
        }
    }
}

fn env_or(key: &str, default: &str) -> String {
    std::env::var(key).unwrap_or_else(|_| default.to_owned())
}
============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }

    pub fn forbidden() -> Self {
        Self {
            status: StatusCode::FORBIDDEN,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! Maintenance — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod routes;
pub mod state;
pub mod services;
pub mod workers;
============================================================
src/main.rs
============================================================
use maintenance::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    maintenance::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.


use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/services/mod.rs
============================================================
//! Business-logic handlers. Generated once by CIaC — this is where your
//! code goes.

pub mod prune_expired;
============================================================
src/services/prune_expired.rs
============================================================
//! Handler for the `PruneExpired` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `PruneExpired` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::state::AppState;

/// Business logic for the `PruneExpired` step.
///
/// Capability bindings:
/// - db: default
#[derive(Debug)]
pub struct PruneExpired<'a> {
    pub db: &'a sqlx::PgPool,
}

impl<'a> PruneExpired<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
        }
    }

    pub async fn handle(&self, payload: serde_json::Value) -> anyhow::Result<serde_json::Value> {
        // TODO: implement the PruneExpired step.
        Ok(payload)
    }
}
============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
    /// Lazy pool: connections are established on first use, so the server
    /// starts (and compiles) without a running database.
    pub db: sqlx::PgPool,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        let db =
            sqlx::postgres::PgPoolOptions::new().connect_lazy(&config.database_url)?;
        Ok(Self {
            config,
            db,
        })
    }
}
============================================================
src/workers/cleanup.rs
============================================================
//! Scheduled job pipeline for `job Cleanup`. Generated by CIaC.

use chrono::Utc;
use cron::Schedule;
use std::str::FromStr;
use std::time::Duration;

use crate::services::prune_expired::PruneExpired;
use crate::state::AppState;

/// The source-level five-field cron expression (minute hour day month
/// weekday), as written in the `.ciac` file.
pub const SCHEDULE: &str = "0 3 * * *";
/// `SCHEDULE` translated for the `cron` crate: a leading seconds field, and
/// weekday `0` rewritten as `7` (the crate accepts weekdays 1-7, not 0-7).
const CRON_CRATE_SCHEDULE: &str = "0 0 3 * * *";
pub const CATCH_UP: bool = false;

pub fn schedule() -> anyhow::Result<Schedule> {
    Ok(Schedule::from_str(CRON_CRATE_SCHEDULE)?)
}

pub async fn run(state: AppState) -> anyhow::Result<()> {
    let schedule = schedule()?;
    loop {
        sleep_until_next(&schedule).await?;
        if let Err(err) = handle_tick_once(&state).await {
            tracing::error!(?err, "scheduled job Cleanup failed");
        }
    }
}

async fn sleep_until_next(schedule: &Schedule) -> anyhow::Result<()> {
    let next = schedule
        .upcoming(Utc)
        .next()
        .ok_or_else(|| anyhow::anyhow!("schedule produced no future instant"))?;
    let delay = (next - Utc::now()).to_std().unwrap_or(Duration::ZERO);
    tokio::time::sleep(delay).await;
    Ok(())
}



async fn handle_tick_once(state: &AppState) -> anyhow::Result<()> {
    let result = serde_json::json!({});

    let result = PruneExpired::new(state).handle(result).await?;
    let _ = result;
    Ok(())
}

#[cfg(test)]
mod tests {
    #[test]
    fn schedule_parses() {
        super::schedule().expect("generated SCHEDULE must parse as a cron expression");
    }
}
============================================================
src/workers/mod.rs
============================================================
//! Queue-driven workers. Generated by CIaC.
//!
//! Run them all with `cargo run --bin workers`.

pub mod cleanup;
